--- a/index.html
+++ b/index.html
@@ -76,15 +76,15 @@
             <div class="row">
               <div class="contact">
                 <h5>JavaScript <i class="glyphicon glyphicon-ok-circle"></i></h5>
+                <h5>Full stack Ruby on Rails <i class="glyphicon glyphicon-ok-circle"></i></h5>
                 <h5>Git <i class="glyphicon glyphicon-ok-circle"></i></h5>
                 <h5>Bash <i class="glyphicon glyphicon-ok-circle"></i></h5>
                 <h5>CSS/SASS/LESS <i class="glyphicon glyphicon-ok-circle"></i></h5>
                 <h5>Frameworks: Angular.js, Ember.js, Meteor, jQuery <i class="glyphicon glyphicon-ok-circle"></i></h5>
                 <h5>PHP <i class="glyphicon glyphicon-ok-circle"></i></h5>
-                <h5>Perl <i class="glyphicon glyphicon-ok-circle"></i></h5>
+                <h5>AWS <i class="glyphicon glyphicon-ok-circle"></i></h5>
                 <h5>MySQL <i class="glyphicon glyphicon-ok-circle"></i></h5>
-                <h5>Ruby <i class="glyphicon glyphicon-ok-circle"></i></h5>
-                <h5>Rails <i class="glyphicon glyphicon-ok-circle"></i></h5>
+                <h5>RubyMotion <i class="glyphicon glyphicon-ok-circle"></i></h5>
                 <h5>Python / Django <i class="glyphicon glyphicon-ok-circle"></i></h5>
                 <h5>Java <i class="glyphicon glyphicon-ok-circle"></i></h5>
               </div>
@@ -127,11 +127,18 @@
         <div class="col-md-12 item-experience" style="margin-top:5px">
           <div style="margin-left:20px">
             <ul>
-              <li>Develop strategy for growing a pre-IPO startup engineering team</li>
-              <li>Lead agile team of 5 developers building a world-class video streaming and management platform</li>
-              <li>Develop and manage hiring process for engineers</li>
+              <li>Responsible for executing strategy to help grow firm's top KPIs through rapid software engineering</li>
+              <li>Lead agile team of 8 developers building a world-class video streaming and management platform</li>
+              <li>Develop strategy for growing a pre-IPO startup engineering organization</li>
+              <li>Expanded engineering team to firm's first remote office in Sacramento, CA</li>
+              <li>Develop and manage recruitment and hiring process for engineers</li>
               <li>Manage engineering team budget</li>
               <li>Help to foster a collaborative and cooperative culture of top-tier engineers</li>
+              <li>Responsible for all software releases and code quality</li>
+              <li>Architected development workflow for maximum agility while maintaining code quality</li>
+              <li>Performance tuning and analysis of web application</li>
+              <li>Developed mobile strategy for company's iOS and Android stacks</li>
+              <li>Transitioned software stack to a service-oriented architecture</li>
             </ul>
           </div>
         </div>
