--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <div class="col-md-4">  <!-- Start Sidebar container -->
           <div class="well">
             <div class="contact">
-              <h1>Michael Tuszynski</h1>
+              <h2>Michael Tuszynski</h2>
               <p>VALUE-DRIVEN LEADER OF ENGINEERS AND ARCHITECTS.</p>
             </div>
             <div class="contact">
@@ -45,13 +45,13 @@
 
               <div class="margin-top-5 margin-bottom-5">
                 <p>
+                  <a href="https://docs.google.com/document/d/1IR6A1G2StSd4xHM2roZCvnC2XEG6DByfJ0m_9lGmDZw/edit?usp=sharing" class="btn btn-xs btn-default" style="border: none !important"><strong>Google Doc </strong><span class="fas fa-arrow-circle-down"></span></a>
+                </p>
+                <p>
                   <a href="MichaelTuszynski_Resume.docx" class="btn btn-xs btn-default" style="border: none !important"><strong>MS Word </strong><span class="fas fa-arrow-circle-down"></span></a>
                 </p>
                 <p>
                   <a href="MichaelTuszynski_Resume.pdf" class="btn btn-xs btn-default" style="border: none !important"><strong>Adobe PDF </strong><span class="fas fa-arrow-circle-down"></span> </a>
-                </p>
-                <p>
-                  <a href="MichaelTuszynski_Resume.txt" class="btn btn-xs btn-default" style="border: none !important"><strong>Plain Text </strong><span class="fas fa-arrow-circle-down"></span> </a>
                 </p>
                 <p>
                   <a href="#" id="print" class="btn btn-xs btn-default" style="border: none !important"><strong>Print </strong><span class="fas fa-print"></span></a>
@@ -67,18 +67,18 @@
             </div>
             <div class="row">
               <div class="contact">
-                <h5>Web Development Methodologies <i class="fas fa-check-circle"></i></h5>
-                <h5>Cloud Architecture <i class="fas fa-check-circle"></i></h5>
-                <h5>​Strategic Planning <i class="fas fa-check-circle"></i></h5>
-                <h5>Budget Management <i class="fas fa-check-circle"></i></h5>
-                <h5>Code Review <i class="fas fa-check-circle"></i></h5>
-                <h5>Problem Solving & Critical Thinking <i class="fas fa-check-circle"></i></h5>
-                <h5>Revenue Growth <i class="fas fa-check-circle"></i></h5>
-                <h5>Product Development <i class="fas fa-check-circle"></i></h5>
-                <h5>Engineering Process Improvement <i class="fas fa-check-circle"></i></h5>
-                <h5>Streaming and Edge Technology <i class="fas fa-check-circle"></i></h5>
-                <h5>Data Analytics <i class="fas fa-check-circle"></i></h5>
-                <h5>DevOps <i class="fas fa-check-circle"></i></h5>
+                <h6>SDLC <i class="fas fa-check-circle"></i></h6>
+                <h6>Cloud Architecture <i class="fas fa-check-circle"></i></h6>
+                <h6>​Strategic Planning <i class="fas fa-check-circle"></i></h6>
+                <h6>Budget Management <i class="fas fa-check-circle"></i></h6>
+                <h6>Code Review <i class="fas fa-check-circle"></i></h6>
+                <h6>Project Management <i class="fas fa-check-circle"></i></h6>
+                <h6>Revenue Growth <i class="fas fa-check-circle"></i></h6>
+                <h6>Product Development <i class="fas fa-check-circle"></i></h6>
+                <h6>Process Improvement <i class="fas fa-check-circle"></i></h6>
+                <h6>Edge Technology <i class="fas fa-check-circle"></i></h6>
+                <h6>Data Analytics <i class="fas fa-check-circle"></i></h6>
+                <h6>DevOps <i class="fas fa-check-circle"></i></h6>
               </div>
             </div>
           </div>
@@ -131,6 +131,7 @@
           </div>
          </div>
        </div>
+       <hr />
        <div class="row">
         <div class="col-md-12">
           <div class="col-md-4">
@@ -157,7 +158,8 @@
               <li>Built the AVOD business from scratch growing impressions on the platform ​200% month over month over the last four months, beginning a new revenue stream for the company estimated to bring in ​$500K in 2017 and between $3MM​ and ​$8MM​ in following years</li>
               <li>Built out a robust infrastructure capable of handling exponential user growth while maintaining the current cost structure in addition to designing architectures for distributed systems.</li>
               <li>Full software lifecycle full stack front and back-end systems alongside 6 client application powered by a customized API</li>
-              <ul>Accomplishments
+              <li>Accomplishments</li>
+              <ul>
               <li>Increased Time Watched for all videos through decreased load times via quantitative analysis</li>
               <li>Ensured 99.98% uptime of platform and API</li>
               <li>Migrated backend stack from Ruby on Rails monolith to Kubernetes</li>
@@ -248,14 +250,12 @@
       <hr />
       <div class="row">
         <div class="col-md-12">
-          <div class="item-name">Early Career Summary</div>
+          <div class="item-name"><strong>Early Career Summary</strong></div>
           <div class="col-md-6">
-            <div class="item-name">Gartmore Global Investments, Conshohocken, PA</div>
-            <div class="item-desc"><strong>Web Developer</strong></div>
+            <div class="item-name">Gartmore Global Investments, Conshohocken, PA <strong>Web Developer</strong></div>
           </div>
           <div class="col-md-6">
-            <div class="item-name">Towers Watson, Philadelphia, PA</div>
-            <div class="item-desc"><strong>Systems Monitoring Team Lead</strong></div>
+            <div class="item-name">Towers Watson, Philadelphia, PA <strong>Systems Monitoring Team Lead</strong></div>
           </div>          
       </div>
       </div>
