--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
             </div>
             <div class="contact">
               <div class="clearfix">
-                  <a href="http://lnkd.in/v3Qbhn" rel="tooltip" data-original-title="LinkedIn"><img src="img/linkedin.png" alt="LinkedIn" width="20"/></a>&nbsp;
-                  <a href="https://twitter.com/tuzman" rel="tooltip" data-original-title="Twitter"><img src="img/twitter.png" alt="Twitter" width="20"/></a>&nbsp;
+                  <a href="http://lnkd.in/v3Qbhn" rel="tooltip" data-original-title="LinkedIn"><i class="fab fa-linkedin-in" alt="Linkedn"></i></a>&nbsp;
+                  <a href="https://twitter.com/tuzman" rel="tooltip" data-original-title="Twitter"><i class="fab fa-twitter-square" alt="Twitter"></i></a>&nbsp;
               </div>
               <div class="clearfix" id="navigation">
                 <a href="#experience">Experience</a> | <a href="#education">Education</a> | <a href="#expertise">Expertise</a>
@@ -267,7 +267,6 @@
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
   <script src="https://kit.fontawesome.com/b9ef94500b.js" crossorigin="anonymous"></script>
-  <script src="js/myresume.js"></script>
 </body>
 
 <footer>
@@ -276,6 +275,13 @@
       <i class="fas fa-phone"></i> <a href="tel:6103047403">(610) 304-7403</a>&nbsp;&nbsp;
       <i class="fas fa-globe"></i> www.miketuszynski.com&nbsp;&nbsp;
       <i class="fas fa-envelope"></i> <a href="mailto:miketuszynski42@gmail.com">miketuszynski42@gmail.com</a>
+      <script type="text/javascript">
+      $(document).ready(function(){    
+        $('#print').click(function(){
+            window.print();
+        });
+      });
+      </script>
     </p>
 </footer>
 </html>
